- supported array parameters; - multiple minor improvements.